docs/1.0/api/alltypes/index.md


### All Types

|

##### [com.rakuten.tech.mobile.miniapp.MiniApp](../com.rakuten.tech.mobile.miniapp/-mini-app/index.md)

This represents the contract between the consuming application and the SDK
by which operations in the mini app ecosystem are exposed.
Should be accessed via [MiniApp.instance](../com.rakuten.tech.mobile.miniapp/-mini-app/instance.md).


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppDisplay](../com.rakuten.tech.mobile.miniapp/-mini-app-display/index.md)

This represents the contract by which the host app can interact with the
display unit of the mini app.
This contract complies to Android's [LifecycleObserver](#) contract, and when made to observe
the lifecycle, it automatically clears up the view state and any services registered with.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppInfo](../com.rakuten.tech.mobile.miniapp/-mini-app-info/index.md)

This represents a Mini App entity.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppSdkConfig](../com.rakuten.tech.mobile.miniapp/-mini-app-sdk-config/index.md)

This represents the configuration settings for the Mini App SDK.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppSdkException](../com.rakuten.tech.mobile.miniapp/-mini-app-sdk-exception/index.md)

A custom exception class which treats the purpose of providing
error information to the consumer app in an unified way.


|

##### [com.rakuten.tech.mobile.miniapp.Version](../com.rakuten.tech.mobile.miniapp/-version/index.md)

This represents a version entity of a Mini App.


